syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.thread.app.proto";
option java_outer_classname = "UserProto";

service AuthService {

  rpc Register (RegisterRequest) returns (AuthResponse);

  rpc Login (LoginRequest) returns (AuthResponse);

}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
}